# gnome-chompski

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
src/: authentication.rs  discord.rs  gpt.rs  main.rs  model.rs  store.rs
